<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_registered_login">Already registered? Login!</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign up!</string>
    <string name="sign_in">Sign in</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="logout">Logout!</string>
    <string name="android_knowledge">Android Knowledge</string>
    <string name="bochisdaniel3_gmail_com">bochisdaniel3@gmail.com</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_fragment">About Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="share_fragment">Share Fragment</string>
</resources>